# dev-code

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  deploy-gh-pages.yml  jekyll-gh-pages.yml  publish-pypi.yml  publish.yml
demo/: .gitignore  Makefile  demo.sh  demo.yaml  generate.py
src/: dev_code.py  devcode.py
src/templates/dev-code/.devcontainer/: Dockerfile  devcontainer.json
tests/: conftest.py  test_dev_code.py  test_generate.py
