[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "dev-code"
dynamic = ["version", "readme"]
description = "Project · editor · container — simplified"
requires-python = ">=3.10"
authors = [
    {name = "Nasser Alansari", email = "dacrystal@users.noreply.github.com"},
]
dependencies = ["click>=8.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
"Homepage" = "https://dacrystal.github.io/dev-code/"
"Source Code" = "https://github.com/dacrystal/dev-code"
"Issues" = "https://github.com/dacrystal/dev-code/issues"

[project.scripts]
devcode = "devcode:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
force-include = {"src/devcode.py" = "devcode.py", "src/templates" = "dev_code_templates"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pyfiglet>=1.0.4",
    "pytest-cov>=4.0",
    "tox>=4.0",
    "pyyaml>=6.0",
    "git-cliff>=2.0",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(assets/'
replacement = "(https://raw.githubusercontent.com/dacrystal/dev-code/main/assets/"
