[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "dev-code"
dynamic = ["version", "readme"]
description = "Renamed to opcd — run pip install opcd"
requires-python = ">=3.10"
authors = [
    {name = "Nasser Alansari", email = "dacrystal@users.noreply.github.com"},
]
dependencies = []
classifiers = [
    "Development Status :: 7 - Inactive",
]

[project.urls]
"Homepage" = "https://dacrystal.github.io/opcd/"
"Source Code" = "https://github.com/dacrystal/opcd"
"Issues" = "https://github.com/dacrystal/opcd/issues"

[project.scripts]
devcode = "devcode:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
force-include = {"src/devcode.py" = "devcode.py"}

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(assets/'
replacement = "(https://raw.githubusercontent.com/dacrystal/dev-code/main/assets/"
